// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MovieDetailPanel snapshots > matches snapshot when movie is null (empty render) 1`] = `<div />`;

exports[`MovieDetailPanel snapshots > matches snapshot with full movie data 1`] = `
<div>
  <div
    animate="[object Object]"
    exit="[object Object]"
    initial="[object Object]"
    style="position: absolute; top: 0px; right: 0px; bottom: 0px; width: 360px; background: rgba(13, 13, 20, 0.97); backdrop-filter: blur(20px); overflow-y: auto; z-index: 60; padding: 20px 18px; font-family: Montserrat, sans-serif; border-left-width: 1px; border-left-style: solid; border-left-color: rgba(255, 255, 255, 0.07);"
    transition="[object Object]"
  >
    <button
      style="background: rgba(255, 255, 255, 0.07); border: none none; border-radius: 50%; width: 30px; height: 30px; display: flex; align-items: center; justify-content: center; cursor: pointer; position: absolute; top: 14px; right: 14px;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x"
        fill="none"
        height="14"
        stroke="#9898b3"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <div
      style="display: flex; gap: 12px; align-items: flex-start; padding-right: 36px;"
    >
      <div
        style="width: 44px; height: 44px; border-radius: 8px; background: linear-gradient(135deg, #e74c3c, #c0392b); display: flex; align-items: center; justify-content: center; flex-shrink: 0; box-shadow: 0 2px 8px rgba(231,76,60,0.4);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-film"
          fill="none"
          height="20"
          stroke="#fff"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M7 3v18"
          />
          <path
            d="M3 7.5h4"
          />
          <path
            d="M3 12h18"
          />
          <path
            d="M3 16.5h4"
          />
          <path
            d="M17 3v18"
          />
          <path
            d="M17 7.5h4"
          />
          <path
            d="M17 16.5h4"
          />
        </svg>
      </div>
      <div>
        <h2
          style="font-family: "Playfair Display", serif; font-size: 18px; font-weight: 900; color: #f0f0f0; line-height: 1.25; margin: 0px;"
        >
          Vertigo
        </h2>
        <span
          style="font-size: 12px; color: #e74c3c; font-weight: 700;"
        >
          1958
        </span>
      </div>
    </div>
    <div
      style="margin-top: 16px; padding: 12px 14px; background: rgba(255, 255, 255, 0.03); border-radius: 10px; border: 1px solid rgba(255, 255, 255, 0.05); display: flex; flex-direction: column; gap: 8px;"
    >
      <div
        style="display: flex; gap: 8px; align-items: center;"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user"
          fill="none"
          height="13"
          stroke="#9898b3"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="flex-shrink: 0;"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
        <div>
          <span
            style="font-size: 10px; color: #5a5a75; display: block;"
          >
            DIRECTOR
          </span>
          <span
            style="font-size: 13px; color: #f0f0f0; font-weight: 600;"
          >
            Alfred Hitchcock
          </span>
        </div>
      </div>
      <div
        style="display: flex; gap: 8px; align-items: flex-start;"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user"
          fill="none"
          height="13"
          stroke="#9898b3"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="margin-top: 2px; flex-shrink: 0;"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
        <div>
          <span
            style="font-size: 10px; color: #5a5a75; display: block;"
          >
            CAST
          </span>
          <span
            style="font-size: 13px; color: #f0f0f0; font-weight: 600;"
          >
            James Stewart, Kim Novak
          </span>
        </div>
      </div>
      <div
        style="display: flex; gap: 8px; align-items: center;"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-film"
          fill="none"
          height="13"
          stroke="#9898b3"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          style="flex-shrink: 0;"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M7 3v18"
          />
          <path
            d="M3 7.5h4"
          />
          <path
            d="M3 12h18"
          />
          <path
            d="M3 16.5h4"
          />
          <path
            d="M17 3v18"
          />
          <path
            d="M17 7.5h4"
          />
          <path
            d="M17 16.5h4"
          />
        </svg>
        <div>
          <span
            style="font-size: 10px; color: #5a5a75; display: block;"
          >
            PRODUCTION
          </span>
          <span
            style="font-size: 13px; color: #f0f0f0; font-weight: 600;"
          >
            Paramount Pictures
          </span>
        </div>
      </div>
    </div>
    <div
      style="margin-top: 16px;"
    >
      <p
        style="font-size: 11px; font-weight: 700; color: #5a5a75; letter-spacing: 0.08em; margin-bottom: 10px; font-family: Montserrat, sans-serif;"
      >
        FILMING LOCATIONS
         (
        2
        )
      </p>
      <div
        style="display: flex; flex-direction: column; gap: 8px;"
      >
        <div
          style="padding: 10px 12px; background: rgba(255, 255, 255, 0.03); border-radius: 8px; border: 1px solid rgba(255, 255, 255, 0.05);"
        >
          <div
            style="display: flex; gap: 7px; align-items: flex-start;"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-map-pin"
              fill="none"
              height="12"
              stroke="#e74c3c"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="margin-top: 2px; flex-shrink: 0;"
              viewBox="0 0 24 24"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <p
              style="font-size: 12px; color: #c0c0d0; margin: 0px; line-height: 1.5; font-weight: 600;"
            >
              Mission Dolores
            </p>
          </div>
          <div
            style="display: flex; gap: 7px; align-items: flex-start; margin-top: 6px;"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-lightbulb"
              fill="none"
              height="11"
              stroke="#f5c518"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="margin-top: 2px; flex-shrink: 0;"
              viewBox="0 0 24 24"
              width="11"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"
              />
              <path
                d="M9 18h6"
              />
              <path
                d="M10 22h4"
              />
            </svg>
            <p
              style="font-size: 11px; color: #6a6a85; margin: 0px; line-height: 1.4; font-style: italic;"
            >
              Hitchcock insisted on filming at dusk.
            </p>
          </div>
        </div>
        <div
          style="padding: 10px 12px; background: rgba(255, 255, 255, 0.03); border-radius: 8px; border: 1px solid rgba(255, 255, 255, 0.05);"
        >
          <div
            style="display: flex; gap: 7px; align-items: flex-start;"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-map-pin"
              fill="none"
              height="12"
              stroke="#e74c3c"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="margin-top: 2px; flex-shrink: 0;"
              viewBox="0 0 24 24"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <p
              style="font-size: 12px; color: #c0c0d0; margin: 0px; line-height: 1.5; font-weight: 600;"
            >
              Golden Gate Bridge
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MovieDetailPanel snapshots > matches snapshot with minimal movie data (no optional fields) 1`] = `
<div>
  <div
    animate="[object Object]"
    exit="[object Object]"
    initial="[object Object]"
    style="position: absolute; top: 0px; right: 0px; bottom: 0px; width: 360px; background: rgba(13, 13, 20, 0.97); backdrop-filter: blur(20px); overflow-y: auto; z-index: 60; padding: 20px 18px; font-family: Montserrat, sans-serif; border-left-width: 1px; border-left-style: solid; border-left-color: rgba(255, 255, 255, 0.07);"
    transition="[object Object]"
  >
    <button
      style="background: rgba(255, 255, 255, 0.07); border: none none; border-radius: 50%; width: 30px; height: 30px; display: flex; align-items: center; justify-content: center; cursor: pointer; position: absolute; top: 14px; right: 14px;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x"
        fill="none"
        height="14"
        stroke="#9898b3"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <div
      style="display: flex; gap: 12px; align-items: flex-start; padding-right: 36px;"
    >
      <div
        style="width: 44px; height: 44px; border-radius: 8px; background: linear-gradient(135deg, #e74c3c, #c0392b); display: flex; align-items: center; justify-content: center; flex-shrink: 0; box-shadow: 0 2px 8px rgba(231,76,60,0.4);"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-film"
          fill="none"
          height="20"
          stroke="#fff"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M7 3v18"
          />
          <path
            d="M3 7.5h4"
          />
          <path
            d="M3 12h18"
          />
          <path
            d="M3 16.5h4"
          />
          <path
            d="M17 3v18"
          />
          <path
            d="M17 7.5h4"
          />
          <path
            d="M17 16.5h4"
          />
        </svg>
      </div>
      <div>
        <h2
          style="font-family: "Playfair Display", serif; font-size: 18px; font-weight: 900; color: #f0f0f0; line-height: 1.25; margin: 0px;"
        >
          Vertigo
        </h2>
      </div>
    </div>
    <div
      style="margin-top: 16px; padding: 12px 14px; background: rgba(255, 255, 255, 0.03); border-radius: 10px; border: 1px solid rgba(255, 255, 255, 0.05); display: flex; flex-direction: column; gap: 8px;"
    />
    <div
      style="margin-top: 16px;"
    >
      <p
        style="font-size: 11px; font-weight: 700; color: #5a5a75; letter-spacing: 0.08em; margin-bottom: 10px; font-family: Montserrat, sans-serif;"
      >
        FILMING LOCATIONS
         (
        1
        )
      </p>
      <div
        style="display: flex; flex-direction: column; gap: 8px;"
      >
        <div
          style="padding: 10px 12px; background: rgba(255, 255, 255, 0.03); border-radius: 8px; border: 1px solid rgba(255, 255, 255, 0.05);"
        >
          <div
            style="display: flex; gap: 7px; align-items: flex-start;"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-map-pin"
              fill="none"
              height="12"
              stroke="#e74c3c"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="margin-top: 2px; flex-shrink: 0;"
              viewBox="0 0 24 24"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
              />
              <circle
                cx="12"
                cy="10"
                r="3"
              />
            </svg>
            <p
              style="font-size: 12px; color: #c0c0d0; margin: 0px; line-height: 1.5; font-weight: 600;"
            >
              City Hall
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
